Changed z-index on sleep slideshow, finished fix#1

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,7 +44,7 @@ a:visited {text-decoration: none; color:#fff;
   width: 1024px;
   height: 600px;
   position: absolute;
-  z-index:99;
+  z-index:2000;
   display: none;
   
 }
